# smart-ocr

./: .gitignore  .venv 2  LICENSE  README.md  TICKETS.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/log/: 2026-03-18_canonical-engine-result.md  2026-04-11_robustness-audit.md
examples/: kuttner_2001_sample.md
examples/bernanke_kuttner_2005/: metadata.json
examples/kuttner_2001/: metadata.json
examples/sutskever_2014/: metadata.json
src/docr/: cli.py
src/docr/core/: config.py
src/docr/engines/: gemini.py
src/docr/pipeline/: processor.py
src/ocr_agent/: __init__.py  cli.py
src/ocr_agent/audit/: __init__.py
src/ocr_agent/core/: __init__.py  config.py  document.py
src/ocr_agent/engines/: __init__.py  base.py  deepseek.py  gemini.py  mistral.py  nougat.py
src/ocr_agent/pipeline/: __init__.py  processor.py  router.py
src/ocr_agent/ui/: __init__.py  console.py  panels.py  progress.py  theme.py
src/ocr_cli/: __init__.py  cli.py
src/ocr_cli/audit/: __init__.py  heuristics.py
src/ocr_cli/core/: __init__.py  config.py
src/ocr_cli/engines/: __init__.py  base.py  deepseek.py  gemini.py  mistral.py  nougat.py
src/ocr_cli/pipeline/: __init__.py  processor.py  router.py
src/ocr_cli/ui/: __init__.py  console.py  panels.py  progress.py  theme.py
src/smart_ocr/: __init__.py  cli.py
src/smart_ocr/audit/: __init__.py
src/smart_ocr/core/: __init__.py  config.py  document.py  result.py
src/smart_ocr/engines/: __init__.py  base.py  deepseek.py  deepseek_vllm.py  gemini.py  marker.py  mistral.py  nougat.py  registry.py  vllm.py  vllm_manager.py
src/smart_ocr/pipeline/: __init__.py  hpc_pipeline.py  hpc_sequential_pipeline.py  processor.py  reconciler.py  router.py
src/smart_ocr/ui/: __init__.py  console.py  panels.py  progress.py
src/socr/: __init__.py  cli.py
src/socr/audit/: __init__.py  heuristics.py  scorer.py
src/socr/benchmark/: runner.py  scorer.py
src/socr/core/: __init__.py  born_digital.py  chunker.py  config.py  difficulty.py  normalizer.py  result.py  retry.py  state.py
src/socr/engines/: __init__.py  base.py  deepseek.py  deepseek_vllm.py  gemini.py  gemini_api.py  glm.py  marker.py  mistral.py  nougat.py  registry.py  vllm.py  vllm_manager.py
src/socr/figures/: extractor.py
src/socr/pipeline/: consensus.py  hpc_pipeline.py  orchestrator.py  processor.py  reconciler.py
tests/: test_audit_heuristics.py  test_benchmark_runner.py  test_born_digital.py  test_chunker.py  test_consensus.py  test_document_state.py  test_engine_result.py  test_failure_scorer.py  test_figure_pass.py  test_gemini_api.py  test_normalizer.py  test_orchestrator.py  test_pipeline_routing.py
